tests/NormalTests/paczka1/small_fuzzy/26838208.err
Error in line 3: gkbFrzRK S649 -2,43
Error in line 4: NxM6nogqz S584 59,4
Error in line 7: RId0gyA A119 30,7
Error in line 1: gkbFrzRK S649 28,9
Error in line 13: qlvoZJML S`49 0,4
Error in line 11: gkbFrzRK A119 68,2
